2011-06-06 Josh Kropf <josh@slashdev.ca>

	* NodeIterable.java: filter out all non-element type nodes to fix error
	  when iterating over alternate entry points extracted from app descriptor
	* RapcTask.java <setDescriptor>: applied patch from Anders Jacobsson to fix
	  typo in fetching compiler settings from app descriptor


2011-04-15 Josh Kropf <josh@slashdev.ca>

    * RapcTask.java (setDescriptor):
      new attribute for parsing BlackBerry_App_Descriptor.xml files
    * BaseJdpType.java (midletClass):
      moved midletClass property from JdpType into base class
    * JdpType.java (writeManifest):
      refactored in an attempt to make method more readable
	* TypeAttribute.java (fromAppDescriptor):
	  new static method for parsing type in app descriptor files
	* NodeIterable.java: new class for iterating DOM node lists


2011-04-15 Josh Kropf <josh@slashdev.ca>

    * RapcTask.java (encoding,executeRapc):
      added attribute for setting file encoding name (-Dfile.encoding=)


2011-02-03 Josh Kropf <josh@slashdev.ca>

    * ApplicationType.java (generate), CodSetType.java (model):
      applied patch from user LouE on sf.net that adds 'model' attribute to ALX


2011-01-18 Josh Kropf <josh@slashdev.ca>

    * ApplicationType.java (generate), CodSetType.java:
      applied patch from Derek Konigsberg which cleans up the output formatting
      of the ALX generator as well as adds a few new properties


2010-12-14 Josh Kropf <josh@slashdev.ca>

    * RapcTask.java (executeRapc): applied patch from Markus Winter that adds
      tools.jar to classpath to fix possible "CreateProcess error=87..." error


2010-12-07 Josh Kropf <josh@slashdev.ca>

    * JadtoolTask.java: new property (output); override output name of .jad file
    * SigtoolTask.java: new property (sigtooljar); set path to signature tool
      .jar file


2010-09-15 Josh Kropf <josh@slashdev.ca>

	* RapcTask.java (executeRapc): only copy JVM arguments that start with -X